--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   camera: ^0.10.0+4
   image_picker: ^0.8.6
   image_cropper: ^1.3.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
